# codereview

./: .gitignore  README.md  package.json  render.yaml
backend/: .env.example  .gitignore  audit_accuracy.py  pyproject.toml  requirements.txt  verify_linters.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py  test_analyzers.py
backend/app/analyzers/: base.py  condition_utils.py  cpp_analyzer.py  deep_rules.py  java_analyzer.py  javascript_analyzer.py  python_analyzer.py  registry.py  smart_explain.py  smart_fix.py  syntax_utils.py  test_generator.py
backend/app/engines/: finding_router.py  linter_runner.py
backend/app/routers/: history.py  review.py
backend/app/services/: analysis_pipeline.py  review_service.py  tool_service.py
backend/scripts/: install-engines.bat
backend/tools/eslint-runner/: eslint.config.js  lint.mjs  package-lock.json  package.json
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Badges.tsx  CodeEditor.tsx  HistoryPanel.tsx  Layout.tsx  Results.tsx
frontend/src/data/: samples.ts
frontend/src/types/: index.ts
frontend/src/utils/: lineDiff.ts  reportExport.ts
scripts/: start-backend.bat  start-frontend.bat
